--- a/account/templates/account/profile.html
+++ b/account/templates/account/profile.html
@@ -12,33 +12,7 @@
 		<!-- Main Content -->
 
 		<div class="col col-xl-6 order-xl-2 col-lg-12 order-lg-1 col-md-12 col-sm-12 col-12">
-			{% if stream %}
-			<div id="newsfeed-items-grid">
-				{% for action in stream %}
-				<div class="ui-block">
-					<!-- action.actor .target .verb -->
-					{% if action.verb == "uploaded a design" %}
-						{% include 'partials/posts/designpost.html' %}
-					{% else %}
-					{%if action.verb == "posted a status" %}
-						{% include 'partials/posts/statuspost.html' %}
-					{% else %}
-						<p>This action contained an unknown verb. Probs a follow.</p>
-					{% endif %}
-					{% endif %}
-<!-- 					{% display_action action %} -->
-				</div>
-				{% endfor %}
-			</div>
-
-			<a id="load-more-button" href="#" class="btn btn-control btn-more" data-load-link="items-to-load.html" data-container="newsfeed-items-grid">
-				<svg class="olymp-three-dots-icon">
-					<use xlink:href="/media/svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use>
-				</svg>
-			</a>
-			{% else %}
-			<h3>{{profile.user.username}} hasn't posted yet!</h3>
-			{% endif %}
+			{% include 'partials/stream/newsfeed.html' %}
 		</div>
 
 		<!-- ... end Main Content -->
@@ -193,6 +167,23 @@ $(document).ready(function() {
  		$(".follow-icon").addClass('d-none')
  	}
  })
+
+ $('.share-design').click(function() {
+	var desid = parseInt($(this).closest("article").attr('design-id'));
+	var data = {
+		"profile": {{user.profile_user.pk}},
+		"design" : desid
+	}
+	console.log(data);
+	$.post('/design/api/share', data)
+ 		.fail(function(xhr, status, error) {
+    		alert("Debug: " + xhr.responseText);
+  		})
+  		.done(function() {
+  			// TODO: How to determine on render if liked or not? Can determine toggle from there.
+  			alert("Success");
+  		});
+})
 </script>
 
 {% endblock %}
